# viktor

./: .gitignore  CHANGELOG.md  Makefile  README.md  _auto_config.sh  config.py  config.yaml  ppmgr.sh  push_changes.sh  pyproject.toml  requirements.txt  run.py  run_debug.py  setup.cfg  setup.py  tox.ini  update_script.sh  viktor.service
tests/: test_app.py  test_bot_base.py  test_db_eng.py  test_forms.py  test_utils.py
tests/mocks/: events.py  users.py
tests/test_core/: test_emoji_scraper.py  test_linguistics.py  test_phrases.py  test_pin_collector.py  test_text_cleaner.py  test_user_changes.py
viktor/: __init__.py  app.py  bot_base.py  commands.yaml  crons.py  db_eng.py  emoji_scraper.py  forms.py  linguistics.py  logg.py  phrases.py  utils.py
viktor/core/: emoji_scraper.py  linguistics.py  phrases.py  pin_collector.py  text_cleaner.py  user_changes.py  uwu.py
viktor/develop/: query_test.py
viktor/etl/: __init__.py  db_transfer.py  etl_acronyms.py  etl_all.py  etl_emojis.py  etl_gs.py  etl_okr_perks.py  etl_okr_quotes.py  etl_okr_users.py  etl_responses.py
viktor/model/: __init__.py  acronym.py  acronyms.py  base.py  channel.py  emoji.py  emojis.py  error.py  okr.py  phrase.py  response.py  responses.py  setting.py  user.py  users.py  uwu.py  word.py
viktor/routes/: actions.py  crons.py  events.py  helpers.py  slash.py
viktor/scripts/: emoji_scraper.py
viktor/settings/: __init__.py  config.py
