[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "viktor"
version = '2.0.3'
description = "A slack bot for various automation activities and.... fun."
authors = ["bobrock <bobrock@tuta.io>"]
license = "MIT"
readme = 'README.md'
repository = 'https://github.com/barretobrock/viktor'
packages = [
    { include = 'viktor' },
]
include = ["CHANGELOG.md"]

[tool.poetry.dependencies]
python = "^3.10"
slacktools = {git = "https://github.com/barretobrock/slacktools.git"}
pukr = { git = "https://github.com/barretobrock/pukr.git", branch = "main" }
Flask = "^3"
lxml = "^4"
Flask-SQLAlchemy = "^3"
numpy = "^1"
pandas = "^2"
psycopg2 = "^2"
pykeepass = "^4"
requests = "^2"
slack_bolt = "^1"
werkzeug = "^3"
# Optional dependencies would go down here
# example = { version = ">=1.7.0", optional = true }

[tool.poetry.dev-dependencies]
pre-commit = "~3"
pytest = "~7"
pytest-cov = "~4"
flake8 = "~6"
tox = "~4"

[tool.isort]
profile = 'black'
force_grid_wrap = 2
force_sort_within_sections = true
skip_gitignore = true
skip_glob = ['*_pb2.py', '*_pb2_grpc.py']

[tool.poetry.extras]
test = ["pytest"]
